# mcp-server-meal-prep

./: .gitignore  COMPARISON.md  CURSOR_SETUP.md  Cargo.toml  LICENSE  Makefile  README.md  README_CN.md  README_TC.md  RUST_DEVELOPMENT_GUIDE.md  SECURITY.md  SETUP_TROUBLESHOOTING.md  build-cross-platform.sh  cursor-mcp-config.json  deny.toml
.github/workflows/: security.yml
benches/: benchmark.rs
releases/: mcp-server-meal-prep-macos-arm64
sbom/: binary-checksum.txt  dependency-tree.txt  license-report.txt  sbom-summary.txt  security-audit.txt
scripts/: generate-sbom.sh  security-check.sh
src/: lib.rs  main.rs  meal_planner.rs  recipes.rs
tests/: integration_tests.rs
