[package]
name = "mcp-server-meal-prep"
version = "1.0.0"
edition = "2021"
description = "MCP Server for meal preparation with cuisine-based recipes and meal planning"
authors = ["Jin Wen <jin.wen@hisgarden.org>"]
license = "MIT"
repository = "https://github.com/hisgarden/mcp-server-meal-prep"
keywords = ["mcp", "recipes", "meal-planning", "cooking"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "mcp_server_meal_prep"
path = "src/lib.rs"

[[bin]]
name = "mcp-server-meal-prep"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.2.0", features = ["server", "transport-io"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Security dependencies
auditable = "0.2.0"

[dev-dependencies]
tokio-test = "0.4"
cargo-audit = "0.18"
cargo-deny = "0.14"

[profile.release]
# Security hardening for release builds
panic = "abort"
lto = true
codegen-units = 1
strip = true

# Security-focused build profile
[profile.security]
inherits = "release"
debug = false
opt-level = "z"  # Optimize for size
lto = "fat"      # Full LTO
codegen-units = 1
strip = "symbols"